test/integration/bad/lang/reused_name.stan
generated quantities {
    vector[3] e;
    // e is selected because it is also a Stan-math function 'e()'
    vector[3] e;
}
